tdf#88713 Fix navigating navigator reminders

Change-Id: I65be92eda086af2f98da723828ff965047e87227